# touchfish

./: .gitignore  Cargo.toml  Cargo.toml.tfds  Cargo.toml.tfrs  README.md  docker-compose.yaml  tfds.dockerfile  tfrs.dockerfile
touchfish-core/: Cargo.toml
touchfish-core/src/: core.rs  lib.rs
touchfish-core/src/api/: fish_api.rs  mod.rs  recipe_api.rs  topic_api.rs
touchfish-core/src/domain/: fish.rs  fish_preview.rs  mod.rs  recipe.rs  recipe_execute_context.rs  statistics.rs  topic.rs
touchfish-core/src/domain/aggr/: mod.rs  topic_with_message.rs
touchfish-core/src/domain/entity/: fish.rs  mod.rs  recipe.rs  topic.rs
touchfish-core/src/domain/vo/: mod.rs  statistics.rs  (+1 more)
touchfish-core/src/facade/: fish_api.rs  fish_facade.rs  mod.rs  recipe_api.rs  recipe_facade.rs  topic_api.rs  topic_facade.rs
touchfish-core/src/infra/: fish_storage.rs  mod.rs  recipe_cache.rs  storage.rs  topic_storage.rs
touchfish-core/src/service/: fish_service.rs  mod.rs  recipe_service.rs  topic_service.rs
touchfish-data-server/: Cargo.toml
touchfish-data-server/src/: main.rs  req.rs  resp.rs
touchfish-recipe-server/: Cargo.toml
touchfish-recipe-server/src/: main.rs  req.rs  resp.rs
touchfish-sqlite-storage/: Cargo.toml
touchfish-sqlite-storage/migrations/2024-10-10-120402_init_tables/: down.sql  up.sql
touchfish-sqlite-storage/src/: lib.rs  schema.rs  sqlite_storage.rs
touchfish-sqlite-storage/src/mapper/: fish_expired_mapper.rs  fish_mapper.rs  mod.rs
touchfish-sqlite-storage/src/model/: fish.rs  fish_expired.rs  mod.rs  topic.rs
touchfish-sqlite-storage/src/repo/: fish_storage.rs  mod.rs  topic_storage.rs
(+139 files in other folders)
