[package]
name = "touchfish-core"
version = "0.1.0"
edition = "2021"

[dependencies]
yfunc-rust = "0.1"
uuid = { version = "1.10.0", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
strum = "0.26"
strum_macros = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.9.0"
toml = "0.8"
image = "0.25"
walkdir = "2.5.0"
