[package]
name = "touchfish-data-server"
version = "0.1.0"
edition = "2021"

[dependencies]
touchfish-core = { path = "../touchfish-core" }
touchfish-mongo-storage = { path = "../touchfish-mongo-storage" }
yfunc-rust = "0.1"
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.9.0"
env_logger = "0.11"