[package]
name = "touchfish-sqlite-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
touchfish-core = { path = "../touchfish-core" }
yfunc-rust = "0.1"
diesel = { version = "2.2.4", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "r2d2", "uuid", "serde_json"] }
r2d2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
